--- a/baolte-g/python-projects/AndyServerWebapp/pyws/pub/testchromedl.html
+++ b/baolte-g/python-projects/AndyServerWebapp/pyws/pub/testchromedl.html
@@ -1,6 +1,7 @@
 Test Chrome Downloads folder inside an iframe
 <br>
 <div>
+  <a href="chrome://downloads">downloads</a>
 </div>
-<iframe src="chrome://downloads></iframe>
+<iframe src="chrome://downloads"></iframe>
 <hr>
