Created sections structure
13 points in 6 sections

--- a/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
+++ b/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
@@ -14,100 +14,47 @@ This Service Agreement ("SA") is made between <SCRIPT>field('Consultant')</SCRIP
 <BR>
 Consultant and Company agree to the following terms and conditions:
 <SMALL><SMALL>
-<OL><LI>PROPERTY: Landlord leases to Tenant and Tenant hires from Landlord the "premises"
-described as: <SCRIPT>field('property')</SCRIPT>.
-Inventory of personal property, if any, to be attached.
-<LI>TERM: The term of this lease shall be for a period of 
-<SCRIPT>field('term') </SCRIPT> commencing 
-<SCRIPT>field('commencing') </SCRIPT>.
-<LI>RENT: Tenant agrees to pay a total rent of $<SCRIPT>field('rent')</SCRIPT> per month, 
-payable as follows: <SCRIPT>field('payable') </SCRIPT>
-<LI>LATE CHARGE: Tenant acknowledges that late payment of rent may cause Lanlord to incur costs and expenses, 
-the exact amount of such costs being extremely difficult and impractical to fix. Such costs
-may include, but are not limited to, processing and accounting expenses, late charges that
-may be imposed on Landlord by terms of any loan secured by the property, costs for additional attempts
-to collect rent, and preparation of notices.  Thererfore, if any installment of rent due from Tenant is not received by Landlord
-within <SCRIPT>field('late_days') </SCRIPT> calendar days after date due,
-Tenant shall pay to Landlord an additional sum of $<SCRIPT>field('late_charge') </SCRIPT>
-as a late charge which shall be deemed additional rent. The Parties agree that this late
-charge represents a fair and reasonable estimate of the costs that Landlord may incur by reason of Tenant's late
-payments. Acceptance of any late charge shall not consitute a waiver of Tenant's default
-with respect to the past due amount, or prevent Landlord from exercising any other rights
-and remedies under this agreement, and as provided by law.
-<LI>PAYMENT: The rent shall be paid at <SCRIPT>field('manager_address') </SCRIPT>
-<LI>SECURITY DEPOSIT: $<SCRIPT>field('deposit') </SCRIPT> as a security deposit has been received. Landlord
-may use therefrom such amounts as are reasonably necessary to remedy Tenant's default in the payment of rent, to repair damages
-caused by Tenant, or by a guest or a licensee of the
-Tenant, to clean the premises, if necessary, upon termination of tenancy, 
-and to replace or return personal property or appurtenances exclusive of
-ordinary wear and tear. If used toward rent or damages during the term of tenancy,
-Tenant agrees to reinstate said totoal security deposit upon five
-days written notice delivered to Teant in person or by mail. 
-This deposit may not be applied toward last months rent. 
-Upon termination of tenancy, Landlord will return deposit to Tenant
-in a timely manner as provided by state law.
-<LI>UTILITIES: Tenant agrees to pay for all utilities and services based upon 
-occupancy of the premises and the following charges:
-<SCRIPT>field('addl_utilities') </SCRIPT>
-except <SCRIPT>field('except_utilities') </SCRIPT>
-which shall be paid by Landlord.
-<LI>CONDITION: Tenant has examined the premises and all furniture, furnishings and appliances
-if any, and fixtures including smoke detector(s) contained therein, and accepts the same as being clean, 
-and in operative condition, with the following exceptions:
-<SCRIPT>field('examine_exceptions') </SCRIPT>
-<LI>OCCUPANTS: The premises are for the sole use as a residence
-by the following named persons only: 
-<SCRIPT>field('Tenant')</SCRIPT> <SCRIPT>field('Addl_Tenants') </SCRIPT>
-<LI>PETS: No animal, bird or pet shall be kept on or
-about the premises without Landlord's prior written consent, except
-<SCRIPT>field('pet_except') </SCRIPT>.
-<LI>USE: Tenant shall not disturb, annoy, endanger or interfere with other 
-tenants of the building or neighbors, nor use the
-premises for any unlawful purposes, nor violate any law or 
-ordinance, nor commit waste or nuisance upon or about the premises.
-<LI>RULES & REGULATIONS: Tenant agrees to comply with all 
-reasonable rules or regulations, 
-posted on the premises or delivered to Tenant,
-and to be liable for any fines or
-charges levied due to violation(s).
-<LI>MAINTENANCE: Tenant shall properly use and operate all furniture,
-furnishings and appliances, electrical, gas and plumbing fixtures and keep
-them as clean and sanitary as their condition permits. Excluding ordinary wear and tear,
-Tenant shall notify landlord and pay for all repairs or
-replacements caused by Tenant(s) or Tenants invitees' negligence
-or misuse. Tenant's personal property is not insured by Landlord.
-<LI>ALTERATIONS: Tenant shall not paint, wallpaper, add or change locks or make alterations to the property without Landlord's prior written consent.
-<LI>KEYS: Keys for possession of premises include: <SCRIPT>field('no_of_keys') </SCRIPT>
-keys to entry doors.
-<LI>ENTRY: Upon not less than 24 hours notice, Tenant shall make the premises available during normal business hours to Landlord, authorized agent
-or representative, for the purpose of entering to (a) make necessary or agreed repairs, decorations, alterations or improvements or supply necessary 
-or agreed services, or (b) show the premises to prospective or actual purchasers, mortgagees, tenants, or contractors. In an emergency, Landlord,
-authorized agent or representative may enter the premises, at any time, without prior permission from Tenant.
-<LI>ASSIGNMENT & SUBLETTING: Tenant shall not let or sublet all or any part of the premises nor assign this agreement or any interest in it.
-<LI>POSSESSION: If Tenant abandons or vacates the premises, Landlord may terminate this agreement and regain lawful possession.
-<LI>HOLD OVER: Any holding over at the expiration of this lease shall  create a month to month tenancy at a monthly rent of <SCRIPT>field('holdover_rent') </SCRIPT>
-payable in advance. All other terms and conditions herein shall remain in full force and effect.
-<LI>ATTORNEY'S FEES: In any action or proceeding arising out of this agreement, the prevailing party shall be entitled to reasonable attorney's fees and costs.
-<LI>WAIVER: The waiver of any breach shall not be construed to be a continuing waiver of any subsequent breach.
-<LI>NOTICE: Notice to Landlord may be served upon Landlord or Manager at <SCRIPT>field('manager_address')</SCRIPT>.
-<LI>ESTOPPEL CERTIFICATE: Within 10 days after written notice, Tenant agrees to execute and deliver an estoppel certificate as submitted by Landlord
-acknowledging that this agreement is unmodified and in full force and effect or in full foruce and effect as modified and stating the modifications. 
-Failure to comply shall be deemed Tenants acknowledgement that the certificate as submitted by Landlord is true and correct and
-may be relied upon by a lender or purchaser.
-<LI>ADDITIONAL TERMS AND CONDITIONS: <SCRIPT>field('additional_conditions')</SCRIPT>
-<LI>ENTIRE CONTRACT: Time is of the essence. All prior agreements between the parties are incorporated in this agreement which constitutes the
-entire contract. Its terms are intended by the parties as a final expression of their agreement with respect to such terms as are included herein and
-may not be contradicted by evidence of any prior agreement or contemporaneous oral agreement. The parties further intend that this agreement 
-constitutes the complete and exclusive statement of its terms and that no extrinsic evidence whatsoever may be introduced in any judicial or other
-proceeeding, if any, involving this agreement.
-<LI>ACKNOWLEDGEMENT: The undersigned have read the foregoing prior to execution and acknowledge receipt of a copy.
+<B>RESPONSIBILITIES OF THE PARTIES</b>
+<br>
+<OL>
+  <LI><B>Term.</B> The initial term of the SA shall begin on <SCRIPT>field('effective date') </SCRIPT> ("Effective Date").
+    The SA shall remain effective until <SCRIPT>field('end date') </SCRIPT>
+    unless terminated in accordance with the provisions herein.
+  <LI><b>Deliverables.</b> Company shall retain exclusive ownership in all deliverables created by Consultant hereunder and
+    will own all intellectual property rights, title and interest in any ideas, concepts, know how, documentation or techniques
+    developed by consultant under this SA.   
+<p>
+<B>COMPENSATION AND PAYMENT</b>
+<br>
+  <LI><B>Fees and Payment.</B> 
+  <LI><B>Reimbursable Expenses.</B> 
+<p>
+<B>REPRESENTATIONS AND OBLIGATIONS</b>
+<br>
+  <LI><B>Conflicts of Interes.</B> 
+  <LI><B>Possession and Use of Company Records.</B> 
+  <LI><b>Confidentiality and Non-Disclosure</b>
+<p>
+<B>TERMINATION</b>
+<br>
+  <LI><B>Termination.</B> 
+<p>
+<B>INDEMNIFICAION</b>
+<br>
+  <LI><B>Liability and Indemnification.</B> 
+  <LI><B>Arbitration and Choice of Law.</B> 
+<p>
+<B>MISCELLANEOUS</b>
+<br>
+  <LI><B>Governing Law.</B> 
+  <LI><B>Notices.</B> 
+  <LI><B>Severability, Survival.</B> 
 </OL>
 <P>Signatures: ______________________________________________________
-<BR>Landlord: <SCRIPT>field('Landlord')</SCRIPT>
+<BR>Consultant: <SCRIPT>field('Consultant')</SCRIPT>
 <P>Signatures:
- ___________________________________________________ &nbsp; &nbsp;
  ___________________________________________________
-<BR>Tenant: <SCRIPT>field('Tenant')</SCRIPT>
+<BR>Company: <SCRIPT>field('Name and title of officer')</SCRIPT> <SCRIPT>field('Company')</SCRIPT>
 
 
 <SCRIPT>function fixPluses(s){return s.split("+").join("%20");}</SCRIPT>
