--- a/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
+++ b/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
@@ -14,6 +14,7 @@ This Service Agreement ("SA") is made between <SCRIPT>field('Consultant')</SCRIP
 <BR>
 Consultant and Company agree to the following terms and conditions:
 <SMALL><SMALL>
+<p>
 <B>RESPONSIBILITIES OF THE PARTIES</b>
 <br>
 <OL>
@@ -26,29 +27,29 @@ Consultant and Company agree to the following terms and conditions:
 <p>
 <B>COMPENSATION AND PAYMENT</b>
 <br>
-  <LI><B>Fees and Payment.</B> 
-  <LI><B>Reimbursable Expenses.</B> 
+  <LI><B>Fees and Payment.</B> Blah
+  <LI><B>Reimbursable Expenses.</B> Blah 
 <p>
-<B>REPRESENTATIONS AND OBLIGATIONS</b>
+<div style="left-margin:0"><B>REPRESENTATIONS AND OBLIGATIONS</b></div>
 <br>
-  <LI><B>Conflicts of Interes.</B> 
-  <LI><B>Possession and Use of Company Records.</B> 
-  <LI><b>Confidentiality and Non-Disclosure</b>
+  <LI><B>Conflicts of Interes.</B> blah
+  <LI><B>Possession and Use of Company Records.</B> blah
+  <LI><b>Confidentiality and Non-Disclosure</b> blah
 <p>
 <B>TERMINATION</b>
 <br>
-  <LI><B>Termination.</B> 
+  <LI><B>Termination.</B> blah
 <p>
 <B>INDEMNIFICAION</b>
 <br>
-  <LI><B>Liability and Indemnification.</B> 
-  <LI><B>Arbitration and Choice of Law.</B> 
+  <LI><B>Liability and Indemnification.</B> blah
+  <LI><B>Arbitration and Choice of Law.</B> blah
 <p>
 <B>MISCELLANEOUS</b>
 <br>
-  <LI><B>Governing Law.</B> 
-  <LI><B>Notices.</B> 
-  <LI><B>Severability, Survival.</B> 
+  <LI><B>Governing Law.</B> blah
+  <LI><B>Notices.</B> blah
+  <LI><B>Severability, Survival.</B> blah
 </OL>
 <P>Signatures: ______________________________________________________
 <BR>Consultant: <SCRIPT>field('Consultant')</SCRIPT>
