close last LI tag before each section

--- a/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
+++ b/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
@@ -14,46 +14,49 @@ This Service Agreement ("SA") is made between <SCRIPT>field('Consultant')</SCRIP
 <BR>
 Consultant and Company agree to the following terms and conditions:
 <SMALL><SMALL>
-<p>
-<B>RESPONSIBILITIES OF THE PARTIES</b>
 <br>
 <OL>
+<p><p>
+<B>RESPONSIBILITIES OF THE PARTIES</b>
   <LI><B>Term.</B> The initial term of the SA shall begin on <SCRIPT>field('effective date') </SCRIPT> ("Effective Date").
     The SA shall remain effective until <SCRIPT>field('end date') </SCRIPT>
     unless terminated in accordance with the provisions herein.
   <LI><b>Deliverables.</b> Company shall retain exclusive ownership in all deliverables created by Consultant hereunder and
     will own all intellectual property rights, title and interest in any ideas, concepts, know how, documentation or techniques
     developed by consultant under this SA.   
-<p>
+  </LI>
+<p><p>
 <B>COMPENSATION AND PAYMENT</b>
 <br>
   <LI><B>Fees and Payment.</B> Blah
   <LI><B>Reimbursable Expenses.</B> Blah    
   </LI>
-<p>
-<div style="left-margin:0"><B>REPRESENTATIONS AND OBLIGATIONS</b></div>
+<p><p>
+<B>REPRESENTATIONS AND OBLIGATIONS</b>
 <br>
   <LI><B>Conflicts of Interes.</B> blah
   <LI><B>Possession and Use of Company Records.</B> blah
   <LI><b>Confidentiality and Non-Disclosure</b> blah
   </LI>
-<p>
+<p><p>
 <B>TERMINATION</b>
 <br>
   <LI><B>Termination.</B> blah
-<p>
+  </LI>
+<p><p>
 <B>INDEMNIFICAION</b>
 <br>
   <LI><B>Liability and Indemnification.</B> blah
   <LI><B>Arbitration and Choice of Law.</B> blah
-<p>
+  </LI>
+<p><p>
 <B>MISCELLANEOUS</b>
 <br>
   <LI><B>Governing Law.</B> blah
   <LI><B>Notices.</B> blah
   <LI><B>Severability, Survival.</B> blah
 </OL>
-<P>Signatures: ______________________________________________________
+<p><P>Signatures: ______________________________________________________
 <BR>Consultant: <SCRIPT>field('Consultant')</SCRIPT>
 <P>Signatures:
  ___________________________________________________
