fix typo; add nbsp before section heading

--- a/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
+++ b/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
@@ -16,7 +16,7 @@ Consultant and Company agree to the following terms and conditions:
 <SMALL><SMALL>
 <br>
 <OL>
-<p><p>
+<p>&nbsp;<p>
 <B>RESPONSIBILITIES OF THE PARTIES</b>
   <LI><B>Term.</B> The initial term of the SA shall begin on <SCRIPT>field('effective date') </SCRIPT> ("Effective Date").
     The SA shall remain effective until <SCRIPT>field('end date') </SCRIPT>
@@ -25,16 +25,16 @@ Consultant and Company agree to the following terms and conditions:
     will own all intellectual property rights, title and interest in any ideas, concepts, know how, documentation or techniques
     developed by consultant under this SA.   
   </LI>
-<p><p>
+<p>&nbsp;<p>
 <B>COMPENSATION AND PAYMENT</b>
 <br>
   <LI><B>Fees and Payment.</B> Blah
   <LI><B>Reimbursable Expenses.</B> Blah    
   </LI>
-<p><p>
+<p>&nbsp;<p>
 <B>REPRESENTATIONS AND OBLIGATIONS</b>
 <br>
-  <LI><B>Conflicts of Interes.</B> blah
+  <LI><B>Conflicts of Interest.</B> blah
   <LI><B>Possession and Use of Company Records.</B> blah
   <LI><b>Confidentiality and Non-Disclosure</b> blah
   </LI>
