fill in more details; no spaces in field names

--- a/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
+++ b/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
@@ -18,35 +18,50 @@ Consultant and Company agree to the following terms and conditions:
 <OL>
 <p>&nbsp;<p>
 <B>RESPONSIBILITIES OF THE PARTIES</b>
-  <LI><B>Term.</B> The initial term of the SA shall begin on <SCRIPT>field('effective date') </SCRIPT> ("Effective Date").
-    The SA shall remain effective until <SCRIPT>field('end date') </SCRIPT>
+  <LI><B>Term.</B> The initial term of the SA shall begin on <SCRIPT>field('effective_date') </SCRIPT> ("Effective Date").
+    The SA shall remain effective until <SCRIPT>field('end_date') </SCRIPT>
     unless terminated in accordance with the provisions herein.
   <LI><b>Deliverables.</b> Company shall retain exclusive ownership in all deliverables created by Consultant hereunder and
     will own all intellectual property rights, title and interest in any ideas, concepts, know how, documentation or techniques
-    developed by consultant under this SA.   
+    developed by consultant under this SA. Subject to payment full for the applicable services, Consultant grants Company a non-exclusive, 
+    non-transferable, royalty-free right to use the Deliverables solely for Company's internal use.  
   </LI>
 <p>&nbsp;<p>
 <B>COMPENSATION AND PAYMENT</b>
 <br>
-  <LI><B>Fees and Payment.</B> Blah
-  <LI><B>Reimbursable Expenses.</B> Blah    
+  <LI><B>Fees and Payment.</B> Company agrees to pay the Fees specified in the statement of work. Fees will be invoiced as outlined 
+    in the statement of work. All payments are due within thirty (30) days of invoice date.
+  <LI><B>Reimbursable Expenses.</B> <SCRIPT>field('per_diem_details') </SCRIPT>    
   </LI>
 <p>&nbsp;<p>
 <B>REPRESENTATIONS AND OBLIGATIONS</b>
 <br>
-  <LI><B>Conflicts of Interest.</B> blah
-  <LI><B>Possession and Use of Company Records.</B> blah
-  <LI><b>Confidentiality and Non-Disclosure</b> blah
+  <LI><B>Conflicts of Interest.</B> Both parties represent that they are free to enter into this Service Agreement, and that this engagement does not 
+    violate the terms of any agreement between either party and any third party. During the term of this Service Agreement, Consultant shall devote as much 
+    of his/her productive time, energy and abilities to the performance of his/her duties hereunder as is necessary to perform the required duties in a 
+    timely and productive manner.  
+  <LI><B>Possession and Use of Company Records.</B> All deliverables created and/or delivered by Consultant to Company hereunder shall be deemed works made for 
+    hire and shall belong to, and be the property of Company.  In order to effectuate Company's ownership in and to any such deliverables, Consultant agrees 
+    to execute and deliver any and all documents and instruments necessary to effectuate such ownership in Company.
+  <LI><b>Confidentiality and Non-Disclosure</b> Consultant and Company agree that at all times during this SA and after the termination of 
+    the SA, they will hold in the strictest confidence, and not use, except for the benefit of the Parties in connection with the services, 
+    any Confidential Information.  "Confidential Information" means any information, ideas or materials, in whatever form, tangible or 
+    intangible, whether disclosed to or learned or developed by the Parties, pertaining in any manner to non-public information that 
+    relates to the actual or anticipated business, research or development of the Parties, or to the Parties' technical data, trade 
+    secrets, or know-how; provided, however, Confidential Information does not include any of the foregoing items to the extent it has 
+    become publicly known and made generally available through no wrongful act of the Parties or of others. 
   </LI>
 <p><p>
 <B>TERMINATION</b>
 <br>
-  <LI><B>Termination.</B> blah
+  <LI><B>Termination.</B> Either party may terminate this SA for convenience by providing at least sever (7) calenday days prior written notice to the other.
   </LI>
 <p><p>
 <B>INDEMNIFICAION</b>
 <br>
-  <LI><B>Liability and Indemnification.</B> blah
+  <LI><B>Liability and Indemnification.</B> Neither Company, nor its officers, directors, employees, affiliates, or parent companies shall be liable for 
+    any injury to the person or property of Consultant or its employees or contractors, except to the extent that such injury was directly caused by the 
+    fault or negligence of Company or its employees acting within the scope of their employment. 
   <LI><B>Arbitration and Choice of Law.</B> blah
   </LI>
 <p><p>
@@ -60,7 +75,7 @@ Consultant and Company agree to the following terms and conditions:
 <BR>Consultant: <SCRIPT>field('Consultant')</SCRIPT>
 <P>Signatures:
  ___________________________________________________
-<BR>Company: <SCRIPT>field('Name and title of officer')</SCRIPT> <SCRIPT>field('Company')</SCRIPT>
+<BR>Company: <SCRIPT>field('Officer_and_title')</SCRIPT> <SCRIPT>field('Company')</SCRIPT>
 
 
 <SCRIPT>function fixPluses(s){return s.split("+").join("%20");}</SCRIPT>
