--- a/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
+++ b/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
@@ -54,7 +54,7 @@ Consultant and Company agree to the following terms and conditions:
 <p><p>
 <B>TERMINATION</b>
 <br>
-  <LI><B>Termination.</B> Either party may terminate this SA for convenience by providing at least sever (7) calenday days prior written notice to the other.
+  <LI><B>Termination.</B> Either party may terminate this SA for convenience by providing at least seven (7) calendar days prior written notice to the other.
   </LI>
 <p><p>
 <B>INDEMNIFICAION</b>
@@ -62,6 +62,11 @@ Consultant and Company agree to the following terms and conditions:
   <LI><B>Liability and Indemnification.</B> Neither Company, nor its officers, directors, employees, affiliates, or parent companies shall be liable for 
     any injury to the person or property of Consultant or its employees or contractors, except to the extent that such injury was directly caused by the 
     fault or negligence of Company or its employees acting within the scope of their employment. 
+    <p>Consultant shall indemnify, defend and hold Company and its officers, directors, and employees, harmless from and against all expenses, 
+      costs, damages, liabilities and losses (including, without limitation, reasonable attorney fees) incurred by Company in connection with 
+      any claim, investigation, demand, action, suit or proceeding (whether civil, criminal, administrative or investigative) arising out 
+      of or resulting from Consultants performance of the Services. 
+    <p>last paragraph ALL CAPS
   <LI><B>Arbitration and Choice of Law.</B> blah
   </LI>
 <p><p>
@@ -81,7 +86,5 @@ Consultant and Company agree to the following terms and conditions:
 <SCRIPT>function fixPluses(s){return s.split("+").join("%20");}</SCRIPT>
 <P>
 * * * 
-<SCRIPT SRC=/js/tellafriend.js></SCRIPT> |
 <A HREF=javascript:location=fixPluses(''+location)>Reload</A> |
-<A HREF=http://pws.okdaily.com/cqsoho/index.html>OK88.com</A> 
 CQForm - r054   5/17/08
