all paragraphs; fields addl_

--- a/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
+++ b/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
@@ -21,16 +21,19 @@ Consultant and Company agree to the following terms and conditions:
   <LI><B>Term.</B> The initial term of the SA shall begin on <SCRIPT>field('effective_date') </SCRIPT> ("Effective Date").
     The SA shall remain effective until <SCRIPT>field('end_date') </SCRIPT>
     unless terminated in accordance with the provisions herein.
+	<SCRIPT>field('addl1') </SCRIPT>
   <LI><b>Deliverables.</b> Company shall retain exclusive ownership in all deliverables created by Consultant hereunder and
     will own all intellectual property rights, title and interest in any ideas, concepts, know how, documentation or techniques
-    developed by consultant under this SA. Subject to payment full for the applicable services, Consultant grants Company a non-exclusive, 
+    developed by consultant under this SA. Subject to payment in full for the applicable services, Consultant grants Company a non-exclusive, 
     non-transferable, royalty-free right to use the Deliverables solely for Company's internal use.  
+	<SCRIPT>field('addl2') </SCRIPT>
   </LI>
 <p>&nbsp;<p>
 <B>COMPENSATION AND PAYMENT</b>
 <br>
   <LI><B>Fees and Payment.</B> Company agrees to pay the Fees specified in the statement of work. Fees will be invoiced as outlined 
     in the statement of work. All payments are due within thirty (30) days of invoice date.
+	<SCRIPT>field('addl3') </SCRIPT>
   <LI><B>Reimbursable Expenses.</B> <SCRIPT>field('per_diem_details') </SCRIPT>    
   </LI>
 <p>&nbsp;<p>
@@ -40,9 +43,11 @@ Consultant and Company agree to the following terms and conditions:
     violate the terms of any agreement between either party and any third party. During the term of this Service Agreement, Consultant shall devote as much 
     of his/her productive time, energy and abilities to the performance of his/her duties hereunder as is necessary to perform the required duties in a 
     timely and productive manner.  
+	<SCRIPT>field('addl5') </SCRIPT>
   <LI><B>Possession and Use of Company Records.</B> All deliverables created and/or delivered by Consultant to Company hereunder shall be deemed works made for 
     hire and shall belong to, and be the property of Company.  In order to effectuate Company's ownership in and to any such deliverables, Consultant agrees 
     to execute and deliver any and all documents and instruments necessary to effectuate such ownership in Company.
+	<SCRIPT>field('addl6') </SCRIPT>
   <LI><b>Confidentiality and Non-Disclosure</b> Consultant and Company agree that at all times during this SA and after the termination of 
     the SA, they will hold in the strictest confidence, and not use, except for the benefit of the Parties in connection with the services, 
     any Confidential Information.  "Confidential Information" means any information, ideas or materials, in whatever form, tangible or 
@@ -50,11 +55,13 @@ Consultant and Company agree to the following terms and conditions:
     relates to the actual or anticipated business, research or development of the Parties, or to the Parties' technical data, trade 
     secrets, or know-how; provided, however, Confidential Information does not include any of the foregoing items to the extent it has 
     become publicly known and made generally available through no wrongful act of the Parties or of others. 
+	<SCRIPT>field('addl7') </SCRIPT>
   </LI>
 <p><p>
 <B>TERMINATION</b>
 <br>
   <LI><B>Termination.</B> Either party may terminate this SA for convenience by providing at least seven (7) calendar days prior written notice to the other.
+	<SCRIPT>field('addl8') </SCRIPT>
   </LI>
 <p><p>
 <B>INDEMNIFICAION</b>
@@ -66,20 +73,43 @@ Consultant and Company agree to the following terms and conditions:
       costs, damages, liabilities and losses (including, without limitation, reasonable attorney fees) incurred by Company in connection with 
       any claim, investigation, demand, action, suit or proceeding (whether civil, criminal, administrative or investigative) arising out 
       of or resulting from Consultants performance of the Services. 
-    <p>last paragraph ALL CAPS
-  <LI><B>Arbitration and Choice of Law.</B> blah
+    <p>IN NO EVENT SHALL EITHER PARTY BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, PUNITIVE OR CONSEQUENTIAL DAMAGES INCURRED BY 
+	  THE OTHER PARTY OR ANY THIRD PARTY, WHETHER IN CONTRACT, TORT, OR BASED UPON A WARRANTY, EVEN IF THE OTHER PARTY OR ANY THIRD PARTY HAS 
+	  BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
+	  <SCRIPT>field('addl9') </SCRIPT>
+  <LI><B>Arbitration and Choice of Law.</B> Any claim or dispute arising from, or relating to the SA or services will be governed by the laws of the 
+    State of California, without regard to its conflicts of law provisions.  
+    <p>
+    In the event that a dispute arises between the Parties, the Parties agree to make a good faith effort to resolve such differences by 
+	mediation before a neutral mediator.  Each party shall pay half the costs and fees of any dispute arising under this Agreement before a 
+	mediator and/or arbitrator, as applicable.  
+	In the event that arbitration is necessary, the prevailing party (as determined by the arbitrator) shall have its costs associated 
+	with the arbitration, including its reasonable attorneys’ fees, paid by the other party. 
+    <SCRIPT>field('addl10') </SCRIPT>
   </LI>
 <p><p>
 <B>MISCELLANEOUS</b>
 <br>
-  <LI><B>Governing Law.</B> blah
-  <LI><B>Notices.</B> blah
-  <LI><B>Severability, Survival.</B> blah
+  <LI><B>Governing Law.</B> This Service Agreement and the rights of the parties hereunder shall be governed by and construed in accordance 
+  with the laws of the State of California, exclusive of conflict or choice of law rules.  
+    <SCRIPT>field('addl11') </SCRIPT>
+  <LI><B>Notices.</B> All notices and other communications in connection with this Service Agreement shall be in writing and shall be deemed 
+    given as follows: when delivered personally to the recipient's address; three days after being deposited in the United States mail, with 
+    postage prepaid to the recipient's address; or when sent by email, such notice is effective upon receipt provided that a duplicate copy of 
+	the notice is promptly given by first class mail, or the recipient delivers a written confirmation of receipt. 
+    <SCRIPT>field('addl12') </SCRIPT>
+  <LI><B>Severability, Survival.</B>  any term or provision of this Service Agreement is held to be void or unenforceable, that term or 
+    provision will be severed from this Service Agreement.  
+    <SCRIPT>field('addl13') </SCRIPT>
 </OL>
+In witness whereof, the parties have signed and delivered this SA by a duly authorized representative of each party as of 
+the last date indicated after the signatures. 
 <p><P>Signatures: ______________________________________________________
+Date__________
 <BR>Consultant: <SCRIPT>field('Consultant')</SCRIPT>
 <P>Signatures:
  ___________________________________________________
+ Date__________
 <BR>Company: <SCRIPT>field('Officer_and_title')</SCRIPT> <SCRIPT>field('Company')</SCRIPT>
 
 
