--- a/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
+++ b/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
@@ -18,8 +18,8 @@ Consultant and Company agree to the following terms and conditions:
 <OL>
 <p>&nbsp;<p>
 <B>RESPONSIBILITIES OF THE PARTIES</b>
-  <LI><B>Term.</B> The initial term of the SA shall begin on <SCRIPT>field('effective_date') </SCRIPT> ("Effective Date").
-    The SA shall remain effective until <SCRIPT>field('end_date') </SCRIPT>
+  <LI><B>Term.</B> The initial term of this SA shall begin on <SCRIPT>field('effective_date') </SCRIPT> ("Effective Date").
+    This SA shall remain effective until <SCRIPT>field('end_date') </SCRIPT>
     unless terminated in accordance with the provisions herein.
 	<SCRIPT>field('addl1') </SCRIPT>
   <LI><b>Deliverables.</b> Company shall retain exclusive ownership in all deliverables created by Consultant hereunder and
@@ -39,7 +39,7 @@ Consultant and Company agree to the following terms and conditions:
 <p>&nbsp;<p>
 <B>REPRESENTATIONS AND OBLIGATIONS</b>
 <br>
-  <LI><B>Conflicts of Interest.</B> Both parties represent that they are free to enter into this Service Agreement, and that this engagement does not 
+  <LI><B>Conflicts of Interest.</B> Both parties represent that they are free to enter into this SA, and that this engagement does not 
     violate the terms of any agreement between either party and any third party. During the term of this Service Agreement, Consultant shall devote as much 
     of his/her productive time, energy and abilities to the performance of his/her duties hereunder as is necessary to perform the required duties in a 
     timely and productive manner.  
@@ -84,21 +84,21 @@ Consultant and Company agree to the following terms and conditions:
 	mediation before a neutral mediator.  Each party shall pay half the costs and fees of any dispute arising under this Agreement before a 
 	mediator and/or arbitrator, as applicable.  
 	In the event that arbitration is necessary, the prevailing party (as determined by the arbitrator) shall have its costs associated 
-	with the arbitration, including its reasonable attorneys’ fees, paid by the other party. 
+	with the arbitration, including its reasonable attorney fees, paid by the other party. 
     <SCRIPT>field('addl10') </SCRIPT>
   </LI>
 <p><p>
 <B>MISCELLANEOUS</b>
 <br>
-  <LI><B>Governing Law.</B> This Service Agreement and the rights of the parties hereunder shall be governed by and construed in accordance 
+  <LI><B>Governing Law.</B> This SA and the rights of the parties hereunder shall be governed by and construed in accordance 
   with the laws of the State of California, exclusive of conflict or choice of law rules.  
     <SCRIPT>field('addl11') </SCRIPT>
-  <LI><B>Notices.</B> All notices and other communications in connection with this Service Agreement shall be in writing and shall be deemed 
+  <LI><B>Notices.</B> All notices and other communications in connection with this SA shall be in writing and shall be deemed 
     given as follows: when delivered personally to the recipient's address; three days after being deposited in the United States mail, with 
     postage prepaid to the recipient's address; or when sent by email, such notice is effective upon receipt provided that a duplicate copy of 
 	the notice is promptly given by first class mail, or the recipient delivers a written confirmation of receipt. 
     <SCRIPT>field('addl12') </SCRIPT>
-  <LI><B>Severability, Survival.</B>  any term or provision of this Service Agreement is held to be void or unenforceable, that term or 
+  <LI><B>Severability, Survival.</B> If any term or provision of this Service Agreement is held to be void or unenforceable, that term or 
     provision will be severed from this Service Agreement.  
     <SCRIPT>field('addl13') </SCRIPT>
 </OL>
