--- a/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
+++ b/dufurlo-b/okdaily/svc/amdisk/svc-agmt.htm
@@ -24,7 +24,7 @@ Consultant and Company agree to the following terms and conditions:
 	<SCRIPT>field('addl1') </SCRIPT>
   <LI><b>Deliverables.</b> Company shall retain exclusive ownership in all deliverables created by Consultant hereunder and
     will own all intellectual property rights, title and interest in any ideas, concepts, know how, documentation or techniques
-    developed by consultant under this SA. Subject to payment in full for the applicable services, Consultant grants Company a non-exclusive, 
+    developed by Consultant under this SA. Subject to payment in full for the applicable services, Consultant grants Company a non-exclusive, 
     non-transferable, royalty-free right to use the Deliverables solely for Company's internal use.  
 	<SCRIPT>field('addl2') </SCRIPT>
   </LI>
@@ -117,4 +117,4 @@ Date__________
 <P>
 * * * 
 <A HREF=javascript:location=fixPluses(''+location)>Reload</A> |
-CQForm - r054   5/17/08
+CQForm - r056   5/3/2021
