--- a/dufurlo-b/logic/lab101.htm
+++ b/dufurlo-b/logic/lab101.htm
@@ -1,6 +1,6 @@
-<form>
-Given a string of decimal digits, return the number of combinations that the string can be docoded. 
+Given a string of decimal digits, return the number of combinations that the string can be decoded. 
 Decoding is done as 1=A, 2=B,...26=Z.
+<form>
 <input name="uiv" value="123">
 <input type=button value="Go"
  onclick="this.value=new Lab101().start([0,this.form.uiv.value])">
