--- a/dufurlo-b/logic/lab101.htm
+++ b/dufurlo-b/logic/lab101.htm
@@ -1,5 +1,6 @@
 Given a string of decimal digits, return the number of combinations that the string can be decoded. 
 Decoding is done as 1=A, 2=B,...26=Z.
+<p>
 <form>
 <input name="uiv" value="123">
 <input type=button value="Go"
@@ -8,6 +9,7 @@ Decoding is done as 1=A, 2=B,...26=Z.
 
 <script>
 //5-4-2021 JKC tested
+//online test url https://yatneeigencode.github.io/dentre-ortega/dufurlo-b/logic/lab101.htm
 Lab101= function(){
   this.tst=function(s,z){ return (parseInt(s)<=z)? 1 : 0 }
   this.fc= function(s){
