correct path to js objects

--- a/dufurlo-b/okdaily/svc/amdisk/agmt/sow.htm
+++ b/dufurlo-b/okdaily/svc/amdisk/agmt/sow.htm
@@ -1,6 +1,6 @@
 <TITLE>Statement of Work</TITLE>
-<SCRIPT  SRC=../amdisk/cq/js/Cgi.js></SCRIPT>
-<SCRIPT  SRC=../amdisk/cq/js/cqbm.js></SCRIPT>
+<SCRIPT  SRC=../cq/js/Cgi.js></SCRIPT>
+<SCRIPT  SRC=../cq/js/cqbm.js></SCRIPT>
 <BODY BACKGROUND=/img/cyan_rule.jpg>
 <style type="text/css" title="tuff-text">
 a:link {text-decoration: underline; color: blue}a:visited {text-decoration: underline; color: #0000FF}a:active {text-decoration: none; color: blue}</style>
@@ -27,14 +27,15 @@ THIS STATEMENT OF WORK (the “SOW”), is made, entered into and effective
 <p>&nbsp;<p>
   <LI><B>Services.</b> Consultant shall provide the following services to the Company: 
     <OL type="A">
-      <LI><SCRIPT>field('services1') </SCRIPT>
-      <LI><SCRIPT>field('services2') </SCRIPT>
-      <LI><SCRIPT>field('services3') </SCRIPT>
-      <LI><SCRIPT>field('services4') </SCRIPT>
+      <LI><SCRIPT>field('service1') </SCRIPT>
+      <LI><SCRIPT>field('service2') </SCRIPT>
+      <LI><SCRIPT>field('service3') </SCRIPT>
+      <LI><SCRIPT>field('service4') </SCRIPT>
+      <LI><SCRIPT>field('service5') </SCRIPT>
     </OL>
   <LI><b>Deliverables.</b> Verbal instructions and simple documentation for services provided.
   <p />
-  <LI><b>Timelines.</b> Reasonable timeframe to maintain business continuity.
+  <LI><b>Timelines.</b> Reasonable timeframe to maintain production schedule for business continuity.
   <p />
   <LI><b>Fees.</b> In consideration of the Services and Deliverables, Consultant will be paid 
     the base hourly rate specified in the Agreement.
@@ -52,12 +53,7 @@ THIS STATEMENT OF WORK (the “SOW”), is made, entered into and effective
   </LI>
 <p>&nbsp;<p>
 </OL>
-In witness whereof, the parties have signed and delivered this SA by a duly authorized representative of each party as of 
-the last date indicated after the signatures. 
-<p><P>Signatures: ______________________________________________________
-Date__________
-<BR>Consultant: <SCRIPT>field('Consultant')</SCRIPT>
-<P>Signatures:
+<P>Signature:
  ___________________________________________________
  Date__________
 <BR>Company: <SCRIPT>field('Officer_and_title')</SCRIPT> <SCRIPT>field('Company')</SCRIPT>
@@ -67,4 +63,4 @@ Date__________
 <P>
 * * * 
 <A HREF=javascript:location=fixPluses(''+location)>Reload</A> |
-CQForm - r056   5/3/2021
+CQForm - r057   5/5/2021
