Adjust verbiage; sync Company field

--- a/dufurlo-b/okdaily/svc/amdisk/agmt/sow.htm
+++ b/dufurlo-b/okdaily/svc/amdisk/agmt/sow.htm
@@ -10,12 +10,12 @@ a:link {text-decoration: underline; color: blue}a:visited {text-decoration: unde
 <B>STATEMENT OF WORK</B>
 </CENTER>
 <P />
-THIS STATEMENT OF WORK (the “SOW”), is made, entered into and effective 
+THIS STATEMENT OF WORK (the “SOW”), is made, entered into and effective on
   <SCRIPT>field('effective_date')</SCRIPT> 
   (the “Effective Date”), by and between 
   <SCRIPT>field('consultant')</SCRIPT> 
   (“Consultant”) and 
-  <SCRIPT>field('company')</SCRIPT> 
+  <SCRIPT>field('Company')</SCRIPT> 
   (“Company”). This SOW shall be subject to and governed by the terms and conditions of 
   the Services Agreement (the “Agreement”). 
   by and between Consultant and Company dated 
@@ -33,9 +33,10 @@ THIS STATEMENT OF WORK (the “SOW”), is made, entered into and effective
       <LI><SCRIPT>field('service4') </SCRIPT>
       <LI><SCRIPT>field('service5') </SCRIPT>
     </OL>
-  <LI><b>Deliverables.</b> Verbal instructions and simple documentation for services provided.
   <p />
-  <LI><b>Timelines.</b> Reasonable timeframe to maintain production schedule for business continuity.
+  <LI><b>Deliverables.</b> Verbal instructions and simple documentation for each of services specified in this SOW.
+  <p />
+  <LI><b>Timelines.</b> Consultant shall provide servies in a reasonable timeframe to maintain production schedule for business continuity.
   <p />
   <LI><b>Fees.</b> In consideration of the Services and Deliverables, Consultant will be paid 
     the base hourly rate specified in the Agreement.
