add fields addl2-5

--- a/dufurlo-b/okdaily/svc/amdisk/agmt/sow.htm
+++ b/dufurlo-b/okdaily/svc/amdisk/agmt/sow.htm
@@ -35,17 +35,21 @@ THIS STATEMENT OF WORK (the “SOW”), is made, entered into and effective on
     </OL>
   <p />
   <LI><b>Deliverables.</b> Verbal instructions and simple documentation for each of services specified in this SOW.
+    <SCRIPT>field('addl2') </SCRIPT>
   <p />
   <LI><b>Timelines.</b> Consultant shall provide servies in a reasonable timeframe to maintain production schedule for business continuity.
+    <SCRIPT>field('addl3') </SCRIPT>
   <p />
   <LI><b>Fees.</b> In consideration of the Services and Deliverables, Consultant will be paid 
     the base hourly rate specified in the Agreement.
+    <SCRIPT>field('addl4') </SCRIPT>
   <p />
   <LI><b>Total SOW Maximum.</b> The dollar amount payable to Consultant by the Company for Services, 
     Deliverables and reimbursable expenses (if allowed) under this SOW shall not exceed 
     <SCRIPT>field('total_max_dollar') </SCRIPT>
     (the “Total SOW Maximum”), without prior written authorization by the Company in 
     the form of a written Amendment signed by both parties. 
+    <SCRIPT>field('addl5') </SCRIPT>
   <p />
   <LI><b>Point of Contact.</b> The Company point of contact for this SOW is: <br />
     Name: <SCRIPT>field('poc_name') </SCRIPT><br />
