--- a/dufurlo-b/okdaily/svc/amdisk/agmt/sow.htm
+++ b/dufurlo-b/okdaily/svc/amdisk/agmt/sow.htm
@@ -17,7 +17,7 @@ THIS STATEMENT OF WORK (the “SOW”), is made, entered into and effective on
   (“Consultant”) and 
   <SCRIPT>field('Company')</SCRIPT> 
   (“Company”). This SOW shall be subject to and governed by the terms and conditions of 
-  the Services Agreement (the “Agreement”). 
+  the Services Agreement ("SA”). 
   by and between Consultant and Company dated 
   <SCRIPT>field('sa_date')</SCRIPT> 
 <BR>
@@ -41,7 +41,7 @@ THIS STATEMENT OF WORK (the “SOW”), is made, entered into and effective on
     <SCRIPT>field('addl3') </SCRIPT>
   <p />
   <LI><b>Fees.</b> In consideration of the Services and Deliverables, Consultant will be paid 
-    the base hourly rate specified in the Agreement.
+    the base hourly rate specified in the SA.
     <SCRIPT>field('addl4') </SCRIPT>
   <p />
   <LI><b>Total SOW Maximum.</b> The dollar amount payable to Consultant by the Company for Services, 
@@ -68,4 +68,4 @@ THIS STATEMENT OF WORK (the “SOW”), is made, entered into and effective on
 <P>
 * * * 
 <A HREF=javascript:location=fixPluses(''+location)>Reload</A> |
-CQForm - r057   5/5/2021
+CQForm - r058   5/10/2021
